# slzmcp

./: README.md  main.py  pyproject.toml
docs/: AUTHENTICATION.md
src/slzmcp/: __init__.py  client.py  server.py
