[project]
name = "slzmcp"
version = "0.1.0"
description = "Simple MCP server and client example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slzmcp"]
